# printerpro

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  alembic.ini  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  billing.py  clients.py  contracts.py  dashboard.py  equipment.py  finance.py  fiscal.py  maintenance.py  notifications.py  plans.py  portal.py  readings.py  tenants.py  users.py
app/core/: config.py  database.py  deps.py  enums.py  security.py
app/models/: __init__.py  base.py  client.py  contract.py  equipment.py  finance.py  fiscal.py  maintenance.py  notification.py  plan.py  portal.py  reading.py  tenant.py  user.py
app/schemas/: auth.py  client.py  common.py  contract.py  dashboard.py  equipment.py  finance.py  fiscal.py  maintenance.py  notification.py  plan.py  portal.py  reading.py  tenant.py  user.py
app/services/: alert_delivery.py  dashboard.py  faturamento.py  finance.py  fiscal.py  maintenance.py  notification.py
docs/: plano-implementacao.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_financeiro.py  0003_fiscal.py  0004_portal.py  0005_notifications.py  0006_maintenance.py
scripts/: build-web.mjs  create_admin.py  dev-local.mjs  docker-entrypoint.sh  serve-web.mjs
src/: App.tsx  ExecutiveDashboard.tsx  PortalWorkspace.tsx  api.ts  styles.css  types.ts
tests/: test_dashboard.py  test_finance.py  test_fiscal.py  test_flow.py
